# admin-dashboard

./: .gitignore
backend/: pyproject.toml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/contacts/: page.tsx
frontend/src/app/form/: page.tsx
frontend/src/app/invoices/: page.tsx
frontend/src/app/team/: page.tsx
frontend/src/components/: Header.tsx  ThemeToggle.tsx
frontend/src/components/DataTable/: filter.tsx  header.tsx  index.tsx  pagination.tsx  toolbar.tsx  viewOptions.tsx
frontend/src/components/form/: PhoneField.tsx  TextField.tsx  index.tsx
frontend/src/components/ui/: phone-input.tsx
frontend/src/constants/: SidebarItems.tsx
frontend/src/data/: icons.tsx  mockData.ts
frontend/src/layouts/: Sidebar.tsx  Topbar.tsx
frontend/src/lib/: theme.ts  utils.ts
frontend/src/provider/: ThemeContextProvider.tsx
frontend/src/providers/: ThemeContextProvider.tsx
frontend/src/theme/: colors.ts  styles.css
frontend/src/types/: api.ts  core.ts  data.ts
