[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "app"
version = "0.1.0"
description = "A FastAPI backend for processing API data."
authors = ["Placeholder Name <placeholder@email.com>"]
readme = "README.md"

[tool.poetry.scripts]
run-dev = "app.run:development"
run-prod = "app.run:production"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
sqlalchemy = "^2.0"
alembic = "^1.13"
pydantic-settings = "^2.4"
pyjwt = "^2.9"
bcrypt = "^4.2"
zentra_api = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^5.0"
